--- a/.gitignore
+++ b/.gitignore
@@ -129,12 +129,15 @@ celerybeat.pid
 
 # Environments
 .env
+.myEnv
 .venv
 env/
+myEnv/
 venv/
 ENV/
 env.bak/
 venv.bak/
+myEnv
 
 # Spyder project settings
 .spyderproject
